--- a/Project_2/ETL Pipeline Preparation.ipynb
+++ b/Project_2/ETL Pipeline Preparation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -112,20 +112,20 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load messages dataset\n",
-    "messages = pd.read_csv('messages.csv')\n",
+    "messages = pd.read_csv('data/disaster_messages.csv')\n",
     "messages.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,14 +192,14 @@
        "4  12  related-1;request-0;offer-0;aid_related-0;medi..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load categories dataset\n",
-    "categories = pd.read_csv('categories.csv')\n",
+    "categories = pd.read_csv('data/disaster_categories.csv')\n",
     "categories.head()"
    ]
   },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "4  related-1;request-0;offer-0;aid_related-0;medi...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -524,12 +524,12 @@
        "3  medical_products-1  search_and_rescue-0  security-0  military-0   \n",
        "4  medical_products-0  search_and_rescue-0  security-0  military-0   \n",
        "\n",
-       "              9        ...                    26                      27  \\\n",
-       "0  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "1  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "2  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "3  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "4  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
+       "              9   ...             26                      27  \\\n",
+       "0  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "1  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "2  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "3  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "4  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
        "\n",
        "                  28        29       30      31            32      33  \\\n",
        "0  weather_related-0  floods-0  storm-0  fire-0  earthquake-0  cold-0   \n",
@@ -548,7 +548,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -809,12 +809,12 @@
        "3  medical_products-1  search_and_rescue-0  security-0  military-0   \n",
        "4  medical_products-0  search_and_rescue-0  security-0  military-0   \n",
        "\n",
-       "0    child_alone       ...           aid_centers    other_infrastructure  \\\n",
-       "0  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "1  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "2  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "3  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
-       "4  child_alone-0       ...         aid_centers-0  other_infrastructure-0   \n",
+       "0    child_alone  ...    aid_centers    other_infrastructure  \\\n",
+       "0  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "1  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "2  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "3  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
+       "4  child_alone-0  ...  aid_centers-0  other_infrastructure-0   \n",
        "\n",
        "0    weather_related    floods    storm    fire    earthquake    cold  \\\n",
        "0  weather_related-0  floods-0  storm-0  fire-0  earthquake-0  cold-0   \n",
@@ -833,7 +833,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,224 +855,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>related</th>\n",
-       "      <th>request</th>\n",
-       "      <th>offer</th>\n",
-       "      <th>aid_related</th>\n",
-       "      <th>medical_help</th>\n",
-       "      <th>medical_products</th>\n",
-       "      <th>search_and_rescue</th>\n",
-       "      <th>security</th>\n",
-       "      <th>military</th>\n",
-       "      <th>child_alone</th>\n",
-       "      <th>...</th>\n",
-       "      <th>aid_centers</th>\n",
-       "      <th>other_infrastructure</th>\n",
-       "      <th>weather_related</th>\n",
-       "      <th>floods</th>\n",
-       "      <th>storm</th>\n",
-       "      <th>fire</th>\n",
-       "      <th>earthquake</th>\n",
-       "      <th>cold</th>\n",
-       "      <th>other_weather</th>\n",
-       "      <th>direct_report</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 36 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "0  related  request  offer  aid_related  medical_help  medical_products  \\\n",
-       "0        1        0      0            0             0                 0   \n",
-       "1        1        0      0            1             0                 0   \n",
-       "2        1        0      0            0             0                 0   \n",
-       "3        1        1      0            1             0                 1   \n",
-       "4        1        0      0            0             0                 0   \n",
-       "\n",
-       "0  search_and_rescue  security  military  child_alone      ...        \\\n",
-       "0                  0         0         0            0      ...         \n",
-       "1                  0         0         0            0      ...         \n",
-       "2                  0         0         0            0      ...         \n",
-       "3                  0         0         0            0      ...         \n",
-       "4                  0         0         0            0      ...         \n",
-       "\n",
-       "0  aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n",
-       "0            0                     0                0       0      0     0   \n",
-       "1            0                     0                1       0      1     0   \n",
-       "2            0                     0                0       0      0     0   \n",
-       "3            0                     0                0       0      0     0   \n",
-       "4            0                     0                0       0      0     0   \n",
-       "\n",
-       "0  earthquake  cold  other_weather  direct_report  \n",
-       "0           0     0              0              0  \n",
-       "1           0     0              0              0  \n",
-       "2           0     0              0              0  \n",
-       "3           0     0              0              0  \n",
-       "4           0     0              0              0  \n",
-       "\n",
-       "[5 rows x 36 columns]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26386\n",
+      "related\n",
+      "False\n"
+     ]
     }
    ],
    "source": [
+    "print(categories.shape[0])\n",
+    "\n",
     "for column in categories:\n",
     "    # set each value to be the last character of the string\n",
     "     categories[column] = categories[column].str.split(\"-\").str[1]\n",
     "#       column\n",
     "#     # convert column from string to numeric\n",
     "     categories[column] = pd.to_numeric(categories[column],errors='coerce')\n",
-    "categories.head()"
+    "     # check whether the patricular column has only value 0 or 1\n",
+    "     if not categories[column].isin([0,1]).all():\n",
+    "         print(column)\n",
+    "         print(categories[column].isin([0,1]).all())\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We would need to remove the records with values not equal 1 or 0. But we would defer it to later after we combined the two table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# categories = categories[categories.related < 2]"
    ]
   },
   {
@@ -1086,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +997,7 @@
        "4  facade ouest d Haiti et le reste du pays aujou...  direct  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1374,12 +1199,12 @@
        "3  UN reports Leogane 80-90 destroyed. Only Hospi...  direct        1   \n",
        "4  facade ouest d Haiti et le reste du pays aujou...  direct        1   \n",
        "\n",
-       "   request  offer  aid_related  medical_help  medical_products      ...        \\\n",
-       "0        0      0            0             0                 0      ...         \n",
-       "1        0      0            1             0                 0      ...         \n",
-       "2        0      0            0             0                 0      ...         \n",
-       "3        1      0            1             0                 1      ...         \n",
-       "4        0      0            0             0                 0      ...         \n",
+       "   request  offer  aid_related  medical_help  medical_products  ...  \\\n",
+       "0        0      0            0             0                 0  ...   \n",
+       "1        0      0            1             0                 0  ...   \n",
+       "2        0      0            0             0                 0  ...   \n",
+       "3        1      0            1             0                 1  ...   \n",
+       "4        0      0            0             0                 0  ...   \n",
        "\n",
        "   aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n",
        "0            0                     0                0       0      0     0   \n",
@@ -1398,7 +1223,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,6 +1238,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now we remove the related column that has value greater than 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df.related < 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 6. Remove duplicates.\n",
     "- Check how many duplicates are in this dataset.\n",
     "- Drop the duplicates.\n",
@@ -1421,16 +1262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "170"
+       "154"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1302,7 @@
        "0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,11 +1322,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
+    "engine = create_engine('sqlite:///data/DisasterResponse_processed.db')\n",
     "df.to_sql('InsertTableName', engine, index=False, if_exists='replace')"
    ]
   },
@@ -1528,7 +1369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
