--- a/Project_4/Starbucks_Capstone_notebook.ipynb
+++ b/Project_4/Starbucks_Capstone_notebook.ipynb
@@ -1422,15 +1422,124 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/monki/anaconda3/envs/cuda_env/lib/python3.9/site-packages/pandas/core/generic.py:5516: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_16705/249512956.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self[name] = value\n"
+      "  transcript_df[index] = transcript_df.event.apply(lambda x: 1 if x == index else 0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                  person            event  \\\n",
+      "0       78afa995795e4d85b5d9ceeca43f5fef   offer received   \n",
+      "2       e2127556f4f64592b11af22de27a7932   offer received   \n",
+      "5       389bc3fa690240e798340f5a15918d5c   offer received   \n",
+      "7       2eeac8d8feae4a8cad5a6af0499a211d   offer received   \n",
+      "8       aa4862eba776480b8bb9c68455b8c2e1   offer received   \n",
+      "...                                  ...              ...   \n",
+      "306527  24f56b5e1849462093931b164eb803b5  offer completed   \n",
+      "306529  b3a1272bc9904337b331bf348c3e8c17      transaction   \n",
+      "306530  68213b08d99a4ae1b0dcb72aebd9aa35      transaction   \n",
+      "306531  a00058cf10334a308c68e7631c529907      transaction   \n",
+      "306532  76ddbd6576844afe811f1a3c0fbb5bec      transaction   \n",
+      "\n",
+      "                                                    value  time  transaction  \\\n",
+      "0        {'offer id': '9b98b8c7a33c4b65b9aebfe6a799e6d9'}     0            0   \n",
+      "2        {'offer id': '2906b810c7d4411798c6938adc9daaa5'}     0            0   \n",
+      "5        {'offer id': 'f19421c1d4aa40978ebb69ca19b0e20d'}     0            0   \n",
+      "7        {'offer id': '3f207df678b143eea3cee63160fa8bed'}     0            0   \n",
+      "8        {'offer id': '0b1e1539f2cc45b7b9fa7c272da2e1d7'}     0            0   \n",
+      "...                                                   ...   ...          ...   \n",
+      "306527  {'offer_id': 'fafdcd668e3743c1bb461111dcafc2a4...   714            0   \n",
+      "306529                     {'amount': 1.5899999999999999}   714            1   \n",
+      "306530                                   {'amount': 9.53}   714            1   \n",
+      "306531                                   {'amount': 3.61}   714            1   \n",
+      "306532                     {'amount': 3.5300000000000002}   714            1   \n",
+      "\n",
+      "        offer received  offer viewed  offer completed  social  \n",
+      "0                    1             0                0       0  \n",
+      "2                    1             0                0       0  \n",
+      "5                    1             0                0       0  \n",
+      "7                    1             0                0       0  \n",
+      "8                    1             0                0       0  \n",
+      "...                ...           ...              ...     ...  \n",
+      "306527               0             0                1       0  \n",
+      "306529               0             0                0       0  \n",
+      "306530               0             0                0       0  \n",
+      "306531               0             0                0       0  \n",
+      "306532               0             0                0       0  \n",
+      "\n",
+      "[272762 rows x 9 columns]\n"
      ]
     }
    ],
+   "source": [
+    "event_list  =  ['transaction', 'offer received', 'offer viewed', 'offer completed', 'social'] \n",
+    "\n",
+    "for index in event_list: \n",
+    "    transcript_df[index] = transcript_df.event.apply(lambda x: 1 if x == index else 0)\n",
+    "\n",
+    "print(transcript_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         0\n",
+       "2         0\n",
+       "5         0\n",
+       "7         0\n",
+       "8         0\n",
+       "         ..\n",
+       "306527    0\n",
+       "306529    1\n",
+       "306530    1\n",
+       "306531    1\n",
+       "306532    1\n",
+       "Name: transaction, Length: 272762, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transcript_df['transaction']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3459761307.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_16705/3459761307.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    transcript_df['value']= transcript_df.apply(lambda x: x.value['amount'] if x.event == 'transaction')\u001b[0m\n\u001b[0m                                                                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "transcript_df['value']= transcript_df.apply(lambda x: x.value['amount'] if x.event == 'transaction')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "transcript_df.event = transcript_df.event.replace(['transaction', 'offer received', 'offer viewed', 'offer completed'],\n",
     "                          [0, 1, 2, 3])"
@@ -1445,20 +1554,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (545429638.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_48204/545429638.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    transcript_df['value']= transcript_df.apply(lambda x: x.value['amount'] if x.event == 'transaction')\u001b[0m\n\u001b[0m                                                                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "transcript_df['value']= transcript_df.apply(lambda x: x.value['amount'] if x.event == 'transaction')\n",
+    "\n",
     "# for index in channels_list: \n",
     "#     portfolio_df[index] = portfolio_df.channels.apply(lambda x: (index in x)+0)\n"
    ]
