--- a/Project_4/Starbucks_Capstone_notebook.ipynb
+++ b/Project_4/Starbucks_Capstone_notebook.ipynb
@@ -863,7 +863,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Saved to offer dataframe to file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offer.to_pickle(\"offer.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load offer database into dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offer = pd.read_pickle(\"offer.pkl\")"
    ]
   },
   {
@@ -1539,7 +1571,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Can we build a recommendation engine to recommend promotional offer with good uptake rate to new customers based on their demographical data age, income, registration date and gender? "
+    "###### Can we determine promotion success once the customer has viewed the offer?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we have to filter out the offer dataframe to obtain the only those offer that has been viewed by customer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offer_view = offer[offer.offer_viewed ==1]"
    ]
   },
   {
@@ -1559,9 +1607,25 @@
    "source": [
     "plt.figure(figsize=(9, 6))\n",
     "### Plot Heatmap with feature multicollinearity\n",
-    "sns.heatmap(offer.corr(), annot = True, vmin = -1, vmax = 1, fmt= \".2f\", cmap = \"coolwarm\")\n",
+    "sns.heatmap(offer_view.corr(), annot = True, vmin = -1, vmax = 1, fmt= \".2f\", cmap = \"coolwarm\")\n",
     "plt.title(\"Feature Multicollinearity - offer\", fontsize = \"x-large\")\n",
     "plt.xticks(rotation = 45, ha = \"right\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we want to predict promotion success we need suitable features for our algorithms. In the heatmap above we compare feature multicollinearity for all features in dataframe of one single offer (here we have choosen offer 2) in realtion to the target variable promotion success.\n",
+    "\n",
+    "We will select our features as follow:\n",
+    "\n",
+    "    customer_id is not a variable as it is just an id\n",
+    "    promotion_success is target variable\n",
+    "    reward, difficulty, duration, are variables which are for each individual offer_id always the same and therefore there is no multicollinearity and these variables wont influence the predictive performance\n",
+    "    age, become_member_on, income and gender have linear correlation to target variable promotion success and will be selected as featrues for prediction\n",
+    "\n",
+    "Finally we prepare features data frame (X) and target data series (y) for each offer id."
    ]
   },
   {
@@ -1582,6 +1646,37 @@
     "    Sensitivity or Recall: is proportion of actual positive cases which are correctly classified: Tp/(Tp + Fn). The output is a number in range [0, 1] where 1 is best and 0 is worst value.\n",
     "    Specificity: is proportion of actual negative cases which are correctly classified: Tn/(Tn + Fp). The output is a number in range [0, 1] where 1 is best and 0 is worst value.\n",
     "    F1-score: is harmonic mean of Precision and Recall: 2 * (precision * recall) / (precision + recall). The output is a number in range [0, 1] where 1 is best and 0 is worst value. The F1-score can be used for classifications with balanced and imbalanced output where false positive and false negative are equally important"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Our predictive model is a classification model with binary output (1 for success and 0 for no success). We will perform modeling on algorithms with class output like SVM, KNN, but also with probability output like Logistic Regression and Random Forest which converts probability output to class output.\n",
+    "\n",
+    "Algorithms\n",
+    "\n",
+    "    Random Forest (RF): is a meta estimator that fits a number of Decision Tree classifiers on various sub-samples of a dataset. It uses averaging to improve the predictive accuracy and control over-fitting [10]. Compared to Decision Tree the Random Forest algorithm needs higher computational ressources and runtime. Thus the Random Forest algorithm generates in general more accurate predictions and is less prone to over-fitting.\n",
+    "   \n",
+    "\n",
+    "Pick algorithm with best predictive performance\n",
+    "\n",
+    "We will choose algorithm with best predictive performance for our case by going through following steps:\n",
+    "\n",
+    "    Firstly we check if the predicted classes are roughly balanced. If Precision and Recall scores are roughly equal than the output is roughly balanced. In this case the F1 score also yields close to both aforementioned scores.\n",
+    "    In case one or more algorithm have roughly balanced classes we pick the algorithm with the highest Accuracy score. The Accuracy of algorithms with inbalanced output will be ignored.\n",
+    "    In case there is more than one algorithm in range of the highest Accuracy and F1 score we look closer at Precision and Recall scores. As for our business it is better to send out offers to customer who would't respond to it than to not send out offers to customers that would respond, we prefer the classifier to predict more False Positives than False Negatives. Therefore we need to have the Recall score higher than the Precision score.\n",
+    "    In case all algorithms to be compared have imbalanced classes we pay more attention to F1 score and pick algorithm with highest F1 score where Recall is higher than Precision score.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will compare our result from using a RF Classifier and Neural Networks"
    ]
   },
   {
@@ -1797,7 +1892,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from subprocess import call\n",
+    "call(['python', '-m', 'nbconvert', 'Starbucks_Capstone_notebook.ipynb'])"
+   ]
   }
  ],
  "metadata": {
